# openapi.yaml
@@ -868,6 +868,40 @@ paths:
             schema:
               $ref: "#/components/schemas/employess"
     
+  /employess/findByemid/{key}:
+    get:
+      x-skaffolder-id: 5dc28ec5f1ef4518a537e7a6
+      x-skaffolder-name: findByemid
+      x-skaffolder-id-resource: 5dc0e3dd9ef7a1181f8e13d0
+      x-skaffolder-resource: employess
+      x-skaffolder-crudAction: findByemid
+      x-skaffolder-crudType: 
+      x-skaffolder-description: CRUD ACTION findByemid
+      x-skaffolder-returnDesc: 
+      x-skaffolder-returnType: 
+      x-skaffolder-url: /findByemid/{key}
+      x-skaffolder-roles: []
+      summary: CRUD ACTION findByemid
+      tags:
+        - employess
+      parameters:
+        - name: key
+          x-skaffolder-type: Objectid
+          in: path
+          description: Id della risorsa emid da cercare
+          required: true
+          schema:
+            type: Objectid
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/employess"
+    
   /employess/findByemployessid/{key}:
     get:
       x-skaffolder-id: 5dc131f5f1abd745f99de511
@@ -975,7 +1009,7 @@ paths:
             schema:
               type: object
               properties:
-                employessid:
+                emid:
                   type: integer
                 idservise:
                   type: integer
@@ -1574,7 +1608,7 @@ components:
           x-skaffolder-id-attr: 5dc0e6939ef7a1181f8e13e4
           x-skaffolder-type: Decimal
       x-skaffolder-relations: 
-        employessid:
+        emid:
           x-skaffolder-type: 1:m
           x-skaffolder-ent1: 5dc0e3dd9ef7a1181f8e13cf
           x-skaffolder-ent2: 5dc0e8119ef7a1181f8e13eb
@@ -1595,7 +1629,7 @@ components:
         _id:
           type: string
           x-skaffolder-required: true
-        employessid:
+        emid:
           type: integer
           x-skaffolder-id-attr: 5dc0e85f9ef7a1181f8e13f4
           x-skaffolder-type: Integer
@@ -1678,12 +1712,12 @@ components:
       x-skaffolder-services: 
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
-        - 5dc0ea569ef7a1181f8e140c
-        - 5dc131f5f1abd745f99de515
         - 5dc13219f1abd745f99de519
         - 5dc13225f1abd745f99de51b
         - 5dc1322ff1abd745f99de51f
         - 5dc13262f1abd745f99de522
+        - 5dc28ebcf1ef4518a537e7a4
+        - 5dc28ec5f1ef4518a537e7a8
       x-skaffolder-roles: []
     - x-skaffolder-id: 5dc13262f1abd745f99de521
       x-skaffolder-name: UserEdit
@@ -1760,7 +1794,7 @@ components:
       x-skaffolder-links: 
         - 5dc1322ef1abd745f99de51c
       x-skaffolder-roles: []
-    - x-skaffolder-id: 5dc0ea569ef7a1181f8e140b
+    - x-skaffolder-id: 5dc28ebbf1ef4518a537e7a3
       x-skaffolder-name: employessEdit
       x-skaffolder-url: /employesses/{id}
       x-skaffolder-template: Edit_Crud
@@ -1768,12 +1802,13 @@ components:
       x-skaffolder-services: 
         - 5dc0e6759ef7a1181f8e13de
         - 5dc0e66c9ef7a1181f8e13dc
-        - 5dc0d95e9ef7a1181f8e1330
+        - 5dc0eeba9ef7a1181f8e1469
+        - 5dc0ee6b9ef7a1181f8e145e
         - 5dc0e6649ef7a1181f8e13da
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
       x-skaffolder-roles: []
-    - x-skaffolder-id: 5dc0ea569ef7a1181f8e140c
+    - x-skaffolder-id: 5dc28ebcf1ef4518a537e7a4
       x-skaffolder-name: employessList
       x-skaffolder-url: /employesses
       x-skaffolder-template: List_Crud
@@ -1783,16 +1818,16 @@ components:
         - 5dc0e6579ef7a1181f8e13d9
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
-        - 5dc0ea569ef7a1181f8e140b
+        - 5dc28ebbf1ef4518a537e7a3
       x-skaffolder-roles: []
-    - x-skaffolder-id: 5dc131f5f1abd745f99de510
+    - x-skaffolder-id: 5dc28ec5f1ef4518a537e7a5
       x-skaffolder-name: roomEdit
       x-skaffolder-url: /rooms/{id}
       x-skaffolder-template: Edit_Crud
       x-skaffolder-resource: 5dc0e8119ef7a1181f8e13f2
       x-skaffolder-services: 
         - 5dc0ee879ef7a1181f8e1463
-        - 5dc131f5f1abd745f99de511
+        - 5dc28ec5f1ef4518a537e7a6
         - 5dc131f5f1abd745f99de513
         - 5dc0ee7d9ef7a1181f8e1461
         - 5dc0efc19ef7a1181f8e147e
@@ -1801,7 +1836,7 @@ components:
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
       x-skaffolder-roles: []
-    - x-skaffolder-id: 5dc131f5f1abd745f99de515
+    - x-skaffolder-id: 5dc28ec5f1ef4518a537e7a8
       x-skaffolder-name: roomList
       x-skaffolder-url: /rooms
       x-skaffolder-template: List_Crud
@@ -1811,7 +1846,7 @@ components:
         - 5dc0ee6b9ef7a1181f8e145e
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
-        - 5dc131f5f1abd745f99de510
+        - 5dc28ec5f1ef4518a537e7a5
       x-skaffolder-roles: []
     - x-skaffolder-id: 5dc13225f1abd745f99de51a
       x-skaffolder-name: serviseEdit
